--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@vercel/postgres": "^0.8.0",
+    "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -19,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.21.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
