--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
