--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-transition-group": "^4.4.5",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
