--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.4.2",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "react-transition-group": "^4.4.5",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
