--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-transition-group": "^4.4.5",
